# MPI-IoC-Polymorphism-Fortran

./: CMakeLists.txt  README.md
code/: CMakeLists.txt
code/apps/: CMakeLists.txt  TestMpiIoc.f90
code/libMpi/: CMakeLists.txt
