CMAKE_MINIMUM_REQUIRED( VERSION 3.10 )
PROJECT( test C Fortran )

ENABLE_LANGUAGE( Fortran )

SET( CMAKE_VERBOSE_MAKEFILE "On" )

SET( CMAKE_Fortran_COMPILER mpif90 )
SET( CMAKE_C_COMPILER mpicc )

FIND_PACKAGE( MPI REQUIRED )
FIND_PACKAGE( OpenMP REQUIRED )

STRING( TIMESTAMP CONFIG_DATE "%Y-%m-%d" )
MESSAGE( STATUS "    --> CONFIG_DATE [${CONFIG_DATE}]" )

SET( CMAKE_BUILD_TYPE Debug )
SET( CMAKE_Fortran_FLAGS_DEBUG "-O0 -g -cpp -std=f2008 -m64 -fcheck=all -Wall -fmax-errors=5" )
SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib )
SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib )
SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin )
SET( CMAKE_Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR}/mod )

ADD_SUBDIRECTORY( code )
